# sequence-maestro

./: .env.example  .gitignore  Cargo.toml  LICENSE-MIT  README.md
src/: allocator.rs  budget.rs  cards.rs  config.rs  derive.rs  engine.rs  fetch.rs  lib.rs  main.rs  model.rs  money.rs  outflow.rs  schedule.rs  state.rs
src/commands/: cycle.rs  daemon.rs  discover.rs  finances.rs  mod.rs  rebalance.rs  rules.rs  simulate.rs  spend.rs  tx.rs
