[package]
name = "maestro"
version = "0.1.0"
edition = "2021"
description = "Personal money-automation engine: a long-running daemon that funds bills from a declared budget model via the Sequence Platform"
license = "MIT OR Apache-2.0"

[dependencies]
sequence-rs = { git = "https://github.com/myst3k/sequence-rs" }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
envconfig = "0.10"
dotenvy = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
clap = { version = "4", features = ["derive"] }
axum = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
colored = "2"
